longhorn/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-longhorn
  namespace: "longhorn-system"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: longhorn.k8s.singhjee.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
